<resources>
	<string name="app_name">NaTour21</string>
	<string name="title">NaTour21</string>
	<string name="hint_username">Nome utente</string>
	<string name="hint_passowrd">Password</string>
	<string name="hint_email">Email</string>
	<string name="hint_passwordRequire">La password deve contenere almeno 6 caratteri</string>
	<string name="hint_confirmPassowrd">Conferma password</string>
	<string name="rememberMe">Ricordami</string>
	<string name="forgotPassword">Password dimenticata?</string>
	<string name="logWithGoogle">ACCEDI CON GOOGLE</string>
	<string name="logWithFacebook">ACCEDI CON FACEBOOK</string>
	<string name="login">ACCEDI</string>
	<string name="register">REGISTRATI</string>
	
	<!-- Facebook Strings -->
	<string name="facebook_app_id">573964120424560</string>
	<string name="fb_login_protocol_scheme">fb573964120424560</string>
	<string name="title_activity_home_page">homePage</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_authentication">Authentication</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	
	<!-- GoogleMaps Strings -->
	<string name="google_maps_api_key">AIzaSyDVQ-0d9dN0BtMw0J4X45DeKwAJYKItnQE</string>
	
	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="swipe_left_for_register">REGISTRATI</string>
	<string name="swipe_right_for_login">ACCEDI</string>
	<string name="title_activity_verify_code">VerifyCode</string>

</resources>