<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
	android:background="@color/white"
                                                   tools:context=".Activity.Login">

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="150dp"
		android:layout_height="255dp"
		android:layout_marginTop="32dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_picture2" />

	<EditText
			android:id="@+id/et_username"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginTop="100dp"
			android:layout_marginEnd="32dp"
			android:autofillHints="none"
			android:background="@drawable/bg_edit_text"
			android:gravity="center_horizontal|center_vertical"
			android:hint="@string/hint_username"
			android:padding="15dp"
			android:textColor="#000000"
			android:textColorHint="#5A5A5A"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
	
	<EditText
			android:id="@+id/et_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="32dp"
			android:autofillHints="none"
			android:background="@drawable/bg_edit_text"
			android:gravity="center_horizontal|center_vertical"
			android:hint="@string/hint_passowrd"
			android:inputType="textPassword"
			android:padding="15dp"
			android:textColor="#000000"
			android:textColorHint="#5F5F5E"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="@+id/et_username"
			app:layout_constraintStart_toStartOf="@+id/et_username"
			app:layout_constraintTop_toBottomOf="@+id/et_username" />
	
	<TextView
			android:id="@+id/titleTxt"
			android:layout_width="wrap_content"
			android:layout_height="72dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="100dp"
			android:layout_marginEnd="8dp"
			android:text="@string/title"
			android:textColor="@color/green"
			android:textSize="45sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	<CheckBox
		android:id="@+id/rememberMe"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="1dp"
		android:text="@string/rememberMe"
		android:textColor="@color/green"
		android:textColorLink="@color/green"
		android:textSize="17sp"
		app:layout_constraintEnd_toStartOf="@+id/passwordRecovery"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="@+id/et_password"
		app:layout_constraintTop_toBottomOf="@+id/et_password" />

	<TextView
		android:id="@+id/passwordRecovery"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="41dp"
		android:layout_marginTop="6dp"
		android:text="@string/forgotPassword"
		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
		android:textColor="@color/green"
		android:textSize="17sp"
		app:layout_constraintEnd_toEndOf="@+id/et_password"
		app:layout_constraintStart_toEndOf="@+id/rememberMe"
		app:layout_constraintTop_toBottomOf="@+id/et_password" />
	
	<Button
			android:id="@+id/btnLoginWithGoogle"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_marginStart="32dp"
			android:layout_marginEnd="32dp"
			android:layout_marginBottom="24dp"
			android:background="@drawable/btn_access_with_google"
			android:text="@string/logWithGoogle"
			android:textColor="@color/white"
			app:backgroundTint="@null"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="@+id/btnLoginWithFacebook"
			app:layout_constraintStart_toStartOf="@+id/btnLoginWithFacebook"
			tools:ignore="TextContrastCheck" />
	
	
	<Button
			android:id="@+id/btnLoginWithFacebook"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_gravity="center_horizontal"
			android:layout_marginEnd="32dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/btn_access_with_facebook"
			android:text="@string/logWithFacebook"
			android:textColor="@color/white"
			app:backgroundTint="@null"
			app:layout_constraintBottom_toTopOf="@+id/btnLoginWithGoogle"
			app:layout_constraintEnd_toEndOf="@+id/btnRegister"
			app:layout_constraintStart_toStartOf="@+id/btnLogin"
			android:layout_marginStart="32dp"/>

	<Button
		android:id="@+id/btnLogin"
		android:layout_width="150dp"
		android:layout_height="50dp"
		android:layout_marginStart="4dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/btn_access"
		android:text="@string/login"
		android:textColor="@color/white"
		app:backgroundTint="@null"
		app:layout_constraintBottom_toTopOf="@+id/btnLoginWithFacebook"
		app:layout_constraintEnd_toStartOf="@+id/btnRegister"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="@+id/et_password"
		tools:ignore="TextContrastCheck" />

	<Button
		android:id="@+id/btnRegister"
		android:layout_width="150dp"
		android:layout_height="50dp"
		android:layout_marginStart="23dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/btn_access"
		android:text="@string/register"
		android:textColor="@color/white"
		app:backgroundTint="@null"
		app:layout_constraintBottom_toTopOf="@+id/btnLoginWithFacebook"
		app:layout_constraintEnd_toEndOf="@+id/et_password"
		app:layout_constraintStart_toEndOf="@+id/btnLogin"
		tools:ignore="TextContrastCheck" />

	<ImageView
		android:id="@+id/imageView3"
		android:layout_width="381dp"
		android:layout_height="266dp"
		android:layout_marginTop="4dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/rememberMe"
		app:srcCompat="@drawable/ic_picture3" />

</androidx.constraintlayout.widget.ConstraintLayout>