<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-47dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/et_ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="none"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/hint_confirmPassowrd"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="#000000"
                android:textColorHint="#5F5F5E"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/et_password"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="none"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="#000000"
                android:textColorHint="#5A5A5A"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/et_email"
                app:layout_constraintStart_toStartOf="@+id/et_email"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="none"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="#000000"
                android:textColorHint="#5A5A5A"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/titleTxt"
                app:layout_constraintStart_toStartOf="@+id/titleTxt"
                app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="none"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/hint_passowrd"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="#000000"
                android:textColorHint="#5F5F5E"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/hintPassword"
                app:layout_constraintStart_toStartOf="@+id/hintPassword"
                app:layout_constraintTop_toBottomOf="@+id/hintPassword" />

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title"
                android:textColor="@color/green"
                android:textSize="45sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_access"
                android:text="@string/register"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="@+id/et_ConfirmPassword"
                app:layout_constraintStart_toStartOf="@+id/et_ConfirmPassword"
                app:layout_constraintTop_toBottomOf="@+id/et_ConfirmPassword"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/hintPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/hint_passwordRequire"
                app:layout_constraintEnd_toEndOf="@+id/et_username"
                app:layout_constraintStart_toStartOf="@+id/et_username"
                app:layout_constraintTop_toBottomOf="@+id/et_username" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="437dp"
                android:layout_height="235dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.785"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_ConfirmPassword"
                app:srcCompat="@drawable/ic_picture3" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="73dp"
                android:layout_height="60dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/titleTxt"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_picture5" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>